# ai-game-studio

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/ai_game_studio/: api.py  main.py  project_manager.py  server.py  worker.py
src/ai_game_studio/tools/: github_tools.py
