[tool.poetry]
name = "ai-game-studio"
version = "0.1.0"
description = "AI-powered GitHub automation tool"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.0"
anthropic = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 